RESOLVED FIXED 255726
[GTK] PlatformDisplayWayland is no longer used for compositing
https://bugs.webkit.org/show_bug.cgi?id=255726
Summary [GTK] PlatformDisplayWayland is no longer used for compositing
Carlos Garcia Campos
Reported 2023-04-20 07:54:52 PDT
We use either WPE renderer or DMABuf (GBM or Surfaceless) so we can remove all the code used for compositing with PlatformDisplayWayland.
Attachments
Carlos Garcia Campos
Comment 1 2023-04-20 07:56:57 PDT
EWS
Comment 2 2023-04-21 05:40:04 PDT
Committed 263231@main (50f4156bfc49): <https://commits.webkit.org/263231@main> Reviewed commits have been landed. Closing PR #12971 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.