[GTK] PlatformDisplayWayland is no longer used for compositing https://bugs.webkit.org/show_bug.cgi?id=255726

Reviewed by Adrian Perez de Castro.

We use either WPE renderer or DMABuf (GBM or Surfaceless) so we can
remove all the code used for compositing with PlatformDisplayWayland.

* Source/WebCore/SourcesGTK.txt:
* Source/WebCore/platform/graphics/egl/GLContext.cpp:
(WebCore::GLContext::createWindowContext):
(WebCore::GLContext::create):
(WebCore::GLContext::createOffscreen):
(WebCore::GLContext::createSharing):
(WebCore::GLContext::~GLContext):
* Source/WebCore/platform/graphics/egl/GLContextWayland.cpp: Removed.
* Source/WebCore/platform/graphics/wayland/PlatformDisplayWayland.cpp:
(WebCore::PlatformDisplayWayland::create):
(WebCore::PlatformDisplayWayland::~PlatformDisplayWayland):
(WebCore::PlatformDisplayWayland::initializeEGLDisplay):
(WebCore::PlatformDisplayWayland::initialize): Deleted.
(WebCore::PlatformDisplayWayland::registryGlobal): Deleted.
(WebCore::PlatformDisplayWayland::createSurface const): Deleted.
* Source/WebCore/platform/graphics/wayland/PlatformDisplayWayland.h:

Canonical link: https://commits.webkit.org/263231@main